--- a/automat_core/Cargo.toml
+++ b/automat_core/Cargo.toml
@@ -14,3 +14,16 @@ paste = "1.0.15"
 open = "5.3.2"
 enigo = "0.6.1"
 once_cell = "1.21.3"
+
+[target.'cfg(target_os = "windows")'.dependencies]
+windows = { version = "0.62.1", features = [
+    "Win32_Foundation",
+    "Win32_UI_WindowsAndMessaging",
+] }
+
+[target.'cfg(target_os = "linux")'.dependencies]
+x11 = { version = "2.21", features = ["xlib"] }
+
+[target.'cfg(target_os = "macos")'.dependencies]
+cocoa = "0.26.1"
+objc = "0.2"
