--- a/playground/Cargo.toml
+++ b/playground/Cargo.toml
@@ -8,6 +8,7 @@ repository.workspace = true
 [dependencies]
 automat-core = { workspace = true }
 tokio = { workspace = true }
+notify-rust = "4.11.7"
 
 [lints]
 workspace = true
