--- a/automat_core/Cargo.toml
+++ b/automat_core/Cargo.toml
@@ -27,3 +27,5 @@ x11 = { version = "2.21", features = ["xlib"] }
 [target.'cfg(target_os = "macos")'.dependencies]
 cocoa = "0.26.1"
 objc = "0.2"
+core-graphics = "0.25.0"
+core-foundation = "0.10.1"
