Add get_window_state utility

--- a/automat_core/Cargo.toml
+++ b/automat_core/Cargo.toml
@@ -19,6 +19,7 @@ once_cell = "1.21.3"
 windows = { version = "0.62.1", features = [
     "Win32_Foundation",
     "Win32_UI_WindowsAndMessaging",
+    "Win32_System_Console"
 ] }
 
 [target.'cfg(target_os = "linux")'.dependencies]
