--- a/automat_core/Cargo.toml
+++ b/automat_core/Cargo.toml
@@ -14,6 +14,7 @@ paste = "1.0.15"
 open = "5.3.2"
 enigo = "0.6.1"
 once_cell = "1.21.3"
+arboard = "3.6.1"
 
 [target.'cfg(target_os = "windows")'.dependencies]
 windows = { version = "0.62.1", features = [
