--- a/automat_core/Cargo.toml
+++ b/automat_core/Cargo.toml
@@ -15,6 +15,7 @@ open = "5.3.2"
 enigo = "0.6.1"
 once_cell = "1.21.3"
 arboard = "3.6.1"
+display-info = "0.5.6"
 
 [target.'cfg(target_os = "windows")'.dependencies]
 windows = { version = "0.62.1", features = [
