--- a/automat_core/Cargo.toml
+++ b/automat_core/Cargo.toml
@@ -16,6 +16,7 @@ enigo = "0.6.1"
 once_cell = "1.21.3"
 arboard = "3.6.1"
 display-info = "0.5.6"
+notify = "8.2.0"
 
 [target.'cfg(target_os = "windows")'.dependencies]
 windows = { version = "0.62.1", features = [
