Add context to each trigger and channels to communicate

--- a/automat_core/Cargo.toml
+++ b/automat_core/Cargo.toml
@@ -7,6 +7,7 @@ repository.workspace = true
 
 [dependencies]
 tokio = { workspace = true }
+tokio-util = "0.7.17"
 thiserror = { workspace = true }
 async-trait = "0.1.89"
 parking_lot = "0.12.4"
