--- a/automat_core/Cargo.toml
+++ b/automat_core/Cargo.toml
@@ -19,6 +19,7 @@ arboard = "3.6.1"
 display-info = "0.5.6"
 notify = "8.2.0"
 sysinfo = "0.37.2"
+derivative = "2.2.0"
 
 [target.'cfg(target_os = "windows")'.dependencies]
 windows = { version = "0.62.1", features = [
